2004-02-12  Jesper Harder  <harder@ifa.au.dk>

	* nntp.el (nntp-erase-buffer): New function.
	(nntp-retrieve-data, nntp-send-command)
	(nntp-send-buffer, nntp-retrieve-groups, nntp-handle-authinfo)
	(nntp-possibly-change-group): Use it.

	* nnnil.el (nnnil-retrieve-headers, nnnil-request-list): Use
	with-current-buffer.

2004-02-12  TAKAI Kousuke  <tak@kmc.gr.jp>

	* compface.el: Merge the ELisp-based uncompface program.
	(compface): New customization group.
	(uncompface-use-external): New user option.
	(uncompface): Call uncompface-internal if uncompface-use-external
	is nil.
	(uncompface-internal): New function.  Note that there are also
	some other functions and variables added for this function.

2004-02-10  Jesper Harder  <harder@ifa.au.dk>

	* nnrss.el (nnrss-read-group-data): Initialize nnrss-group-hashtb
	if necessary.

2004-02-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam-report.el (spam-report-unplug-agent)
	(spam-report-plug-agent, spam-report-deagentize)
	(spam-report-agentize, spam-report-url-ping-temp-agent-function):
	support for the Agent in spam-report: when unplugged, report to a
	file; when plugged, submit all the requests

	* spam.el (spam-register-routine): improved message about
	registration

2004-02-09  Jesper Harder  <harder@ifa.au.dk>

	* rfc2047.el (rfc2047-qp-or-base64): New function to reduce
	dependencies.
	(rfc2047-encode): Use it.

	* gnus-art.el (gnus-button-marker-list): Move before first
	reference.

	* imap.el (imap-parse-flag-list, imap-parse-body-extension)
	(imap-parse-body): Fix format string mismatch.

	* gnus-score.el (gnus-summary-increase-score): do.

	* nnrss.el (nnrss-close): New function.

2004-02-08  Jesper Harder  <harder@ifa.au.dk>

	* nnrss.el (nnrss-make-filename): New function.
	(nnrss-request-delete-group, nnrss-read-server-data)
	(nnrss-save-server-data, nnrss-read-group-data)
	(nnrss-save-group-data): Use it.
	(nnrss-save-server-data, nnrss-save-group-data): Use gnus-prin1.