@@ -1,3 +1,7 @@
+2004-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* compface.el (uncompface-use-external): Default to nil.
+
 2004-02-12  Jesper Harder  <harder@ifa.au.dk>
 
 	* nntp.el (nntp-erase-buffer): New function.
